--- a/AutomationFramework/AutomationTestSetFramework.csproj
+++ b/AutomationFramework/AutomationTestSetFramework.csproj
@@ -8,6 +8,10 @@
     <NeutralLanguage />
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\DUONGCH\Projects\AutomationTestSetFramework\AutomationFramework\AutomationTestSetFramework.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.113" />
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.6">
